<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/lvWorkout">

    <fragment
        android:id="@+id/lvWorkout"
        android:name="com.example.appehb.ui.workout.fragment.WorkoutListFragment"
        android:label="@string/title_workouts"
        tools:layout="@layout/workout_list_fragment">

        <action
            android:id="@+id/fabAddWorkout"
            app:destination="@id/workoutItemFragment" />
    </fragment>

    <fragment
        android:id="@+id/workoutItemFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/workout_item_fragment" >
        <action
            android:id="@+id/fabAddExercise"
            app:destination="@id/addExerciseFragment" />
    </fragment>

    <fragment
        android:id="@+id/addExerciseFragment"
        android:label="@string/add_exercise"
        tools:layout="@layout/add_exercise_fragment" >
        <action
            android:id="@+id/fabAddExercise"
            app:destination="@id/workoutItemFragment" />
    </fragment>

</navigation>
